--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ai-sdk/google-vertex": "^4.0.61",
+    "@ai-sdk/react": "^3.0.99",
+    "@tamagui/babel-plugin": "^2.0.0-rc.17",
+    "@tamagui/config": "^2.0.0-rc.17",
+    "@tamagui/portal": "^2.0.0-rc.17",
+    "ai": "^6.0.97",
+    "babel-preset-expo": "^54.0.10",
     "expo": "~54.0.33",
+    "expo-constants": "~18.0.13",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-worklets": "^0.7.4",
+    "tamagui": "^2.0.0-rc.17",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
