--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-worklets": "^0.7.4",
+    "react-native-worklets": "0.5.1",
     "tamagui": "^2.0.0-rc.17",
     "zod": "^4.3.6"
   },
