--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@ai-sdk/google-vertex": "^4.0.61",
     "@ai-sdk/react": "^3.0.99",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@tamagui/babel-plugin": "^2.0.0-rc.17",
     "@tamagui/config": "^2.0.0-rc.17",
     "@tamagui/portal": "^2.0.0-rc.17",
