--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-expo": "^54.0.10",
     "expo": "~54.0.33",
     "expo-auth-session": "~7.0.10",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.23",
